feat: update settlement codebase & transfer payment integration
