# internal/settlement/adapter/repository/external.api.repository.go
@@ -1,0 +1,10 @@
+package repository
+
+import (
+	"context"
+	"github.com/shopspring/decimal"
+)
+
+func (r *SettlementRepository) UpdateUserBalance(ctx context.Context, accountNo string, amount decimal.Decimal) error {
+	return nil
+}
