# lib/protos/openapiv2/lib/protos/v1/transfer/transfer.swagger.json
@@ -120,6 +120,26 @@
         }
       }
     },
+    "typeMoney": {
+      "type": "object",
+      "properties": {
+        "currencyCode": {
+          "type": "string",
+          "description": "The three-letter currency code defined in ISO 4217."
+        },
+        "units": {
+          "type": "string",
+          "format": "int64",
+          "description": "The whole units of the amount.\nFor example if `currencyCode` is `\"USD\"`, then 1 unit is one US dollar."
+        },
+        "nanos": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Number of nano (10^-9) units of the amount.\nThe value must be between -999,999,999 and +999,999,999 inclusive.\nIf `units` is positive, `nanos` must be positive or zero.\nIf `units` is zero, `nanos` can be positive, zero, or negative.\nIf `units` is negative, `nanos` must be negative or zero.\nFor example $-1.75 is represented as `units`=-1 and `nanos`=-750,000,000."
+        }
+      },
+      "description": "Represents an amount of money with its currency type."
+    },
     "v1TransferBalanceRequest": {
       "type": "object",
       "properties": {
@@ -172,6 +192,20 @@
             "type": "object",
             "$ref": "#/definitions/v1TransferBalanceResponse"
           }
+        }
+      }
+    },
+    "v1TransferInfoResponse": {
+      "type": "object",
+      "properties": {
+        "trxId": {
+          "type": "string"
+        },
+        "accountNo": {
+          "type": "string"
+        },
+        "amount": {
+          "$ref": "#/definitions/typeMoney"
         }
       }
     },
